# PythonTricks

./: custom_type_approach1.py  decoratorLogOnError.ipynb  functionWithCustomStringType.ipynb  regexToParseUrl.ipynb
DataProcessing/: decoratorLogOnError.ipynb  functionWithCustomStringType.ipynb
SmallNeatTricks/: LoggerSetup.ipynb  WalrusOperator.ipynb  log_setup.py  poetry.md
pandera/: fmagic.ipynb  hypothesis_test.py  pandera.ipynb  pyproject.toml
