[tool.poetry]
name = "pandera-hello"
version = "0.1.0"
description = ""
authors = ["Anatolii Burtsev <ab.canada.world@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
pandera = {extras = ["hypothesis"], version = "^0.16.1"}
jupyter = "^1.0.0"
ipytest = "^0.13.3"
hypothesis = "^6.82.6"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
